--- a/system/uorb/Kconfig
+++ b/system/uorb/Kconfig
@@ -3,7 +3,7 @@
 # see the file kconfig-language.txt in the NuttX tools repository.
 #
 
-menuconfig UORB
+config UORB
 	tristate "uorb(micro object request broker)"
 	depends on SENSORS && USENSOR
 	default n
